# blueprint-agent-code-generation

./: Cargo.toml  README.md
square-blueprint-bin/: Cargo.toml
square-blueprint-bin/src/: main.rs
square-blueprint-lib/: Cargo.toml
square-blueprint-lib/src/: context.rs  lib.rs
square-blueprint-lib/src/jobs/: square.rs
