[package]
name        = "square-blueprint-lib"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"

[dependencies]
blueprint-sdk = { version = "0.5", default-features = false, features = ["macros", "tracing"] }
tokio         = { version = "1", features = ["rt-multi-thread", "macros"] }
